# symmetric-difference

./: README.md  symmetric-difference.cabal
src/Data/Set/: SymmetricDifference.hs
