name:                symmetric-difference
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matthewleon/symmetric-difference#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Leon
maintainer:          ml@matthewleon.com
copyright:           2017 Matthew Leon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Set.SymmetricDifference
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , groups
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthewleon/symmetric-difference
